# playbookforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-bec-wire-fraud/: SCENARIO.md  playbook.json
demos/02-okta-mfa-fatigue/: SCENARIO.md  playbook.json
demos/03-aws-s3-exfil/: SCENARIO.md  playbook.json
demos/04-malicious-oauth-grant/: SCENARIO.md  playbook.json
demos/05-linux-cryptominer/: SCENARIO.md  playbook.json
demos/06-ci-supply-chain/: SCENARIO.md  playbook.json
demos/07-data-exfil-insider/: SCENARIO.md  playbook.json
demos/08-broken-playbook-cigate/: SCENARIO.md  playbook.json
examples/: help.txt  phishing-response.json  ransomware-response.json  version.txt
playbookforge/: __init__.py  attack.py  cli.py  lint.py  model.py  render.py  sarif.py  scaffold.py
tests/: test_playbookforge.py
