[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis-playbookforge"
version = "0.1.0"
description = "Incident-response playbook generator and linter mapped to MITRE ATT&CK."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cognis Digital" }]
maintainers = [{ name = "Cognis Digital" }]
keywords = ["incident-response", "playbook", "mitre-attack", "dfir", "security", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7.0"]

[project.scripts]
playbookforge = "playbookforge.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/playbookforge"

[tool.setuptools]
packages = ["playbookforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
